vlib/v/checker/tests/unknown_field.out
vlib/v/checker/tests/unknown_field.vv:7:12: error: type `Test` has no field named `sdd`
    5 | fn main() {
    6 |     t := Test{}
    7 |     println(t.sdd)
      |               ~~~
    8 | }
vlib/v/checker/tests/unknown_field.vv:7:2: error: `println` can not print void expressions
    5 | fn main() {
    6 |     t := Test{}
    7 |     println(t.sdd)
      |     ~~~~~~~~~~~~~~
    8 | }
